@@ -175,28 +175,24 @@ class TestPrinter:
         assert event_obj['event'] == 'STATE_CHANGED'
         assert event_obj['state'] == 'ATTENTION'
         assert event_obj['source'] == 'WUI'
-        assert event_obj['data']['ready'] is False
 
         printer.set_state(const.State.IDLE, const.Source.HW, ready=True)
         item = printer.queue.get_nowait()
         assert isinstance(item, Event)
         event_obj = item.to_payload()
         assert event_obj['state'] == 'IDLE'
-        assert event_obj['data']['ready'] is True
 
         printer.set_state(const.State.PRINTING, const.Source.SERIAL)
         item = printer.queue.get_nowait()
         assert isinstance(item, Event)
         event_obj = item.to_payload()
         assert event_obj['state'] == 'PRINTING'
-        assert event_obj['data']['ready'] is False
 
         printer.set_state(const.State.FINISHED, const.Source.FIRMWARE)
         item = printer.queue.get_nowait()
         assert isinstance(item, Event)
         event_obj = item.to_payload()
         assert event_obj['state'] == 'FINISHED'
-        assert event_obj['data']['ready'] is False
 
     def test_loop(self, requests_mock, printer):
         requests_mock.post(SERVER + "/p/events", status_code=204)
