@@ -13,6 +13,7 @@ ChangeLog
     * Added command_id to telemetry, if there's a command in progress
     * READY state changed to IDLE, PREPARED state changed to READY
     * Added CANCEL_PRINTER_READY command handler
+    * Removed ready information from get_info and event_cb functions
 
 0.6.0 (2021-12-17)
     * Introduce `const.State.PREPARED`
